--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "1.1.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.0.0",
+    "@loadable/component": "^5.15.0",
     "framer-motion": "^3.10.6",
     "mongodb": "^3.6.8",
     "next": "10.0.6",
