--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^3.10.6",
     "mongodb": "^3.6.8",
     "next": "10.0.6",
+    "next-pwa": "^5.2.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
